Revert "fix: #1426 collapse uses focus-within instead of focus (#1428)"
This reverts commit 20c9c3077df20354dc391bcf630af7cb1e3e169a.

--- a/src/components/unstyled/collapse.css
+++ b/src/components/unstyled/collapse.css
@@ -17,7 +17,9 @@
   max-height: 0px;
 }
 .collapse-open .collapse-content,
-.collapse:focus-within:not(.collapse-close) .collapse-content,
-.collapse:not(.collapse-close) input[type="checkbox"]:checked ~ .collapse-content {
+.collapse:focus:not(.collapse-close) .collapse-content,
+.collapse:not(.collapse-close)
+  input[type="checkbox"]:checked
+  ~ .collapse-content {
   max-height: none;
 }
